--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   share_plus: ^6.3.1
   glassmorphism_ui: ^0.3.0
   flutter_cached_pdfview: ^0.4.2
+  upgrader: ^6.5.0
 
 dev_dependencies:
   flutter_test:
